--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ td a:hover {
 
 .card img {
     width: 100px;
-    height: 100px;
+    height: auto;
     border-radius: 5px;
     margin-right: 1rem;
 }
