--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,21 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 4rem; /* 增加底部外边距，避免被页脚遮挡 */
 }
 
 h1, h2 {
     color: #333;
+}
+
+h3 {
+    color: #333;
+    margin-top: 2rem;
+}
+
+h4 {
+    color: #333;
+    margin-top: 0;
 }
 
 ul {
@@ -47,9 +58,9 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: fixed;
     width: 100%;
     bottom: 0;
+    position: relative; /* 改为相对定位 */
 }
 
 table {
